// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VCarousel.js should render component and match snapshot 1`] = `

<div class="v-carousel">
  <div class="v-carousel__prev">
    <button type="button"
            class="v-btn v-btn--icon theme--dark"
    >
      <div class="v-btn__content">
        <i aria-hidden="true"
           class="v-icon material-icons theme--dark"
           style="font-size: 46px;"
        >
          chevron_left
        </i>
      </div>
    </button>
  </div>
  <div class="v-carousel__next">
    <button type="button"
            class="v-btn v-btn--icon theme--dark"
    >
      <div class="v-btn__content">
        <i aria-hidden="true"
           class="v-icon material-icons theme--dark"
           style="font-size: 46px;"
        >
          chevron_right
        </i>
      </div>
    </button>
  </div>
  <div class="v-carousel__controls">
  </div>
</div>

`;

exports[`VCarousel.js should render component in RTL mode and match snapshot 1`] = `

<div class="v-carousel">
  <div class="v-carousel__prev">
    <button type="button"
            class="v-btn v-btn--icon theme--dark"
    >
      <div class="v-btn__content">
        <i aria-hidden="true"
           class="v-icon material-icons theme--dark"
           style="font-size: 46px;"
        >
          chevron_right
        </i>
      </div>
    </button>
  </div>
  <div class="v-carousel__next">
    <button type="button"
            class="v-btn v-btn--icon theme--dark"
    >
      <div class="v-btn__content">
        <i aria-hidden="true"
           class="v-icon material-icons theme--dark"
           style="font-size: 46px;"
        >
          chevron_left
        </i>
      </div>
    </button>
  </div>
  <div class="v-carousel__controls">
  </div>
</div>

`;

exports[`VCarousel.js should render component with custom duration between image cycles and match snapshot 1`] = `

<div class="v-carousel">
  <div class="v-carousel__prev">
    <button type="button"
            class="v-btn v-btn--icon theme--dark"
    >
      <div class="v-btn__content">
        <i aria-hidden="true"
           class="v-icon material-icons theme--dark"
           style="font-size: 46px;"
        >
          chevron_left
        </i>
      </div>
    </button>
  </div>
  <div class="v-carousel__next">
    <button type="button"
            class="v-btn v-btn--icon theme--dark"
    >
      <div class="v-btn__content">
        <i aria-hidden="true"
           class="v-icon material-icons theme--dark"
           style="font-size: 46px;"
        >
          chevron_right
        </i>
      </div>
    </button>
  </div>
  <div class="v-carousel__controls">
  </div>
</div>

`;

exports[`VCarousel.js should render component with custom icon and match snapshot 1`] = `

<div class="v-carousel">
  <div class="v-carousel__prev">
    <button type="button"
            class="v-btn v-btn--icon theme--dark"
    >
      <div class="v-btn__content">
        <i aria-hidden="true"
           class="v-icon material-icons theme--dark"
           style="font-size: 46px;"
        >
          chevron_left
        </i>
      </div>
    </button>
  </div>
  <div class="v-carousel__next">
    <button type="button"
            class="v-btn v-btn--icon theme--dark"
    >
      <div class="v-btn__content">
        <i aria-hidden="true"
           class="v-icon material-icons theme--dark"
           style="font-size: 46px;"
        >
          chevron_right
        </i>
      </div>
    </button>
  </div>
  <div class="v-carousel__controls">
    <button type="button"
            class="v-btn v-btn--icon v-btn--small theme--dark v-carousel__controls__item v-carousel__controls__item--active"
    >
      <div class="v-btn__content">
        <i aria-hidden="true"
           class="v-icon material-icons theme--dark"
           style="font-size: 18px;"
        >
          stop
        </i>
      </div>
    </button>
    <button type="button"
            class="v-btn v-btn--icon v-btn--small theme--dark v-carousel__controls__item"
    >
      <div class="v-btn__content">
        <i aria-hidden="true"
           class="v-icon material-icons theme--dark"
           style="font-size: 18px;"
        >
          stop
        </i>
      </div>
    </button>
    <button type="button"
            class="v-btn v-btn--icon v-btn--small theme--dark v-carousel__controls__item"
    >
      <div class="v-btn__content">
        <i aria-hidden="true"
           class="v-icon material-icons theme--dark"
           style="font-size: 18px;"
        >
          stop
        </i>
      </div>
    </button>
  </div>
  <div class="v-responsive v-image v-carousel__item tab-transition-enter tab-transition-enter-active"
       style="height: 100%;"
  >
    <div class="v-responsive__content">
    </div>
  </div>
  <div class="v-responsive v-image v-carousel__item"
       style="height: 100%; display: none;"
  >
    <div class="v-responsive__content">
    </div>
  </div>
  <div class="v-responsive v-image v-carousel__item"
       style="height: 100%; display: none;"
  >
    <div class="v-responsive__content">
    </div>
  </div>
</div>

`;

exports[`VCarousel.js should render component with custom next icon and match snapshot 1`] = `

<div class="v-carousel">
  <div class="v-carousel__prev">
    <button type="button"
            class="v-btn v-btn--icon theme--dark"
    >
      <div class="v-btn__content">
        <i aria-hidden="true"
           class="v-icon material-icons theme--dark"
           style="font-size: 46px;"
        >
          chevron_left
        </i>
      </div>
    </button>
  </div>
  <div class="v-carousel__next">
    <button type="button"
            class="v-btn v-btn--icon theme--dark"
    >
      <div class="v-btn__content">
        <i aria-hidden="true"
           class="v-icon material-icons theme--dark"
           style="font-size: 46px;"
        >
          stop
        </i>
      </div>
    </button>
  </div>
  <div class="v-carousel__controls">
  </div>
</div>

`;

exports[`VCarousel.js should render component with custom prev icon and match snapshot 1`] = `

<div class="v-carousel">
  <div class="v-carousel__prev">
    <button type="button"
            class="v-btn v-btn--icon theme--dark"
    >
      <div class="v-btn__content">
        <i aria-hidden="true"
           class="v-icon material-icons theme--dark"
           style="font-size: 46px;"
        >
          stop
        </i>
      </div>
    </button>
  </div>
  <div class="v-carousel__next">
    <button type="button"
            class="v-btn v-btn--icon theme--dark"
    >
      <div class="v-btn__content">
        <i aria-hidden="true"
           class="v-icon material-icons theme--dark"
           style="font-size: 46px;"
        >
          chevron_right
        </i>
      </div>
    </button>
  </div>
  <div class="v-carousel__controls">
  </div>
</div>

`;

exports[`VCarousel.js should render component with image cycling off and match snapshot 1`] = `

<div class="v-carousel">
  <div class="v-carousel__prev">
    <button type="button"
            class="v-btn v-btn--icon theme--dark"
    >
      <div class="v-btn__content">
        <i aria-hidden="true"
           class="v-icon material-icons theme--dark"
           style="font-size: 46px;"
        >
          chevron_left
        </i>
      </div>
    </button>
  </div>
  <div class="v-carousel__next">
    <button type="button"
            class="v-btn v-btn--icon theme--dark"
    >
      <div class="v-btn__content">
        <i aria-hidden="true"
           class="v-icon material-icons theme--dark"
           style="font-size: 46px;"
        >
          chevron_right
        </i>
      </div>
    </button>
  </div>
  <div class="v-carousel__controls">
  </div>
</div>

`;

exports[`VCarousel.js should render component with selected active item 1`] = `

<div class="v-carousel">
  <div class="v-carousel__prev">
    <button type="button"
            class="v-btn v-btn--icon theme--dark"
    >
      <div class="v-btn__content">
        <i aria-hidden="true"
           class="v-icon material-icons theme--dark"
           style="font-size: 46px;"
        >
          chevron_left
        </i>
      </div>
    </button>
  </div>
  <div class="v-carousel__next">
    <button type="button"
            class="v-btn v-btn--icon theme--dark"
    >
      <div class="v-btn__content">
        <i aria-hidden="true"
           class="v-icon material-icons theme--dark"
           style="font-size: 46px;"
        >
          chevron_right
        </i>
      </div>
    </button>
  </div>
  <div class="v-carousel__controls">
    <button type="button"
            class="v-btn v-btn--icon v-btn--small theme--dark v-carousel__controls__item"
    >
      <div class="v-btn__content">
        <i aria-hidden="true"
           class="v-icon material-icons theme--dark"
           style="font-size: 18px;"
        >
          fiber_manual_record
        </i>
      </div>
    </button>
    <button type="button"
            class="v-btn v-btn--icon v-btn--small theme--dark v-carousel__controls__item v-carousel__controls__item--active"
    >
      <div class="v-btn__content">
        <i aria-hidden="true"
           class="v-icon material-icons theme--dark"
           style="font-size: 18px;"
        >
          fiber_manual_record
        </i>
      </div>
    </button>
    <button type="button"
            class="v-btn v-btn--icon v-btn--small theme--dark v-carousel__controls__item"
    >
      <div class="v-btn__content">
        <i aria-hidden="true"
           class="v-icon material-icons theme--dark"
           style="font-size: 18px;"
        >
          fiber_manual_record
        </i>
      </div>
    </button>
  </div>
  <div class="v-responsive v-image v-carousel__item"
       style="height: 100%; display: none;"
  >
    <div class="v-responsive__content">
    </div>
  </div>
  <div class="v-responsive v-image v-carousel__item tab-transition-enter tab-transition-enter-active"
       style="height: 100%;"
  >
    <div class="v-responsive__content">
    </div>
  </div>
  <div class="v-responsive v-image v-carousel__item"
       style="height: 100%; display: none;"
  >
    <div class="v-responsive__content">
    </div>
  </div>
</div>

`;

exports[`VCarousel.js should render component without delimiters 1`] = `

<div class="v-carousel">
  <div class="v-carousel__prev">
    <button type="button"
            class="v-btn v-btn--icon theme--dark"
    >
      <div class="v-btn__content">
        <i aria-hidden="true"
           class="v-icon material-icons theme--dark"
           style="font-size: 46px;"
        >
          chevron_left
        </i>
      </div>
    </button>
  </div>
  <div class="v-carousel__next">
    <button type="button"
            class="v-btn v-btn--icon theme--dark"
    >
      <div class="v-btn__content">
        <i aria-hidden="true"
           class="v-icon material-icons theme--dark"
           style="font-size: 46px;"
        >
          chevron_right
        </i>
      </div>
    </button>
  </div>
  <div class="v-responsive v-image v-carousel__item tab-transition-enter tab-transition-enter-active"
       style="height: 100%;"
  >
    <div class="v-responsive__content">
    </div>
  </div>
  <div class="v-responsive v-image v-carousel__item"
       style="height: 100%; display: none;"
  >
    <div class="v-responsive__content">
    </div>
  </div>
  <div class="v-responsive v-image v-carousel__item"
       style="height: 100%; display: none;"
  >
    <div class="v-responsive__content">
    </div>
  </div>
</div>

`;

exports[`VCarousel.js should render component without next icon and match snapshot 1`] = `

<div class="v-carousel">
  <div class="v-carousel__prev">
    <button type="button"
            class="v-btn v-btn--icon theme--dark"
    >
      <div class="v-btn__content">
        <i aria-hidden="true"
           class="v-icon material-icons theme--dark"
           style="font-size: 46px;"
        >
          chevron_left
        </i>
      </div>
    </button>
  </div>
  <div class="v-carousel__controls">
  </div>
</div>

`;

exports[`VCarousel.js should render component without prev icon and match snapshot 1`] = `

<div class="v-carousel">
  <div class="v-carousel__next">
    <button type="button"
            class="v-btn v-btn--icon theme--dark"
    >
      <div class="v-btn__content">
        <i aria-hidden="true"
           class="v-icon material-icons theme--dark"
           style="font-size: 46px;"
        >
          chevron_right
        </i>
      </div>
    </button>
  </div>
  <div class="v-carousel__controls">
  </div>
</div>

`;
